@@ -3,6 +3,13 @@
 	reviewed by: jribas
 
 	* flumotion/component/producers/fms/fms.py:
+	Do not remove subscribers. It is done already in a deeper layer.
+
+2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>
+
+	reviewed by: jribas
+
+	* flumotion/component/producers/fms/fms.py:
 	Modifications to be compatible with new rtmpy
 
 2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>
